# spider

./: Cargo.toml  IMPLEMENTATION_PLAN_2.md  README.md  instructions.md  metadata.json  test_spider_api.sh
implementation-docs/: IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_3.md  IMPLEMENTATION_PLAN_4.md
pkg/: manifest.json
spider/: Cargo.toml
spider/src/: lib.rs  types.rs  utils.rs
spider/src/provider/: anthropic.rs  mod.rs
spider/tests/: integration_test.rs
ui/: package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.css  App.tsx  index.css
ui/src/auth/: anthropic.ts
ui/src/components/: ApiKeys.tsx  Chat.tsx  ClaudeLogin.tsx  Conversations.tsx  McpServers.tsx  Settings.tsx  SpiderKeys.tsx
ui/src/services/: websocket.ts
ui/src/store/: spider.ts
ui/src/types/: caller-utils.d.ts  skeleton.ts  websocket.ts
ui/src/utils/: api.ts
