[package]
name = "spider"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "hyperware:process"

[dependencies]
anyhow = "1.0"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
hyperprocess_macro = { git = "https://github.com/hyperware-ai/hyperprocess-macro", rev = "ed99c19" }
hyperware-anthropic-sdk = { git = "https://github.com/hyperware-ai/hyperware-anthropic-sdk", rev = "6f50ca7" }
hyperware_process_lib = { git = "https://github.com/hyperware-ai/process_lib", rev = "753dac3", features = ["hyperapp"] }
process_macros = "0.1"
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
wit-bindgen = "0.42.1"


[dependencies.caller-utils]
path = "../target/caller-utils"
optional = true

[features]
simulation-mode = []
